# fast_avatar_ai

./: .gitignore  README.md  package-lock.json  package.json
.cargo/: config.toml
config/: characters.json  settings.json
docs/: asr-extension.md  configuration.md  live2d-integration.md  tts-extension.md
models/: README.md
resources/models/: README.md
scripts/: melotts_service.py  run-release.ps1  sync-assets.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_log.rs  config.rs  main.rs  server.rs  speech.rs
web/: index.html  main.js  memory.js  styles.css
